<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="pe.com.distriluz.app.ui.codeconfirm.CodeConfirmMvvm.ViewModel" />

        <import type="android.view.View" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:alpha="100"
            android:background="#FFFFFFFF"
            android:elevation="0dp"
            android:scrollbarSize="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_candado" />


    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/code_confirm_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#003a70"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="36dp"
        android:layout_height="3dp"
        android:layout_marginStart="24dp"
        android:background="#0172ce"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/code_confirm_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout


        android:id="@+id/pin_content_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:padding="@dimen/pin_content_layout_padding" >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/pin_label_margin" />

        <LinearLayout android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <EditText android:id="@+id/pin_first_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:textStyle="bold"
                 />

            <EditText android:id="@+id/pin_second_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                 />

            <EditText android:id="@+id/pin_third_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                 />

            <EditText android:id="@+id/pin_forth_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                 />

        </LinearLayout>

        <EditText android:id="@+id/pin_hidden_edittext"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:cursorVisible="false"

            android:maxLength="5"
            android:textColor="#00000000"
          />
    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/code_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_content_layout" />

    <TextView
        android:id="@+id/txtreintentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_confirm_reenviar"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>



</layout>
