<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradient_bg_finish_password"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
                app:srcCompat="@drawable/bg_torres"></androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatImageView

android:id="@+id/bgfondochispas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_chispas"></androidx.appcompat.widget.AppCompatImageView>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="139dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_password"></androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/txtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/dialog_finish_title"
                android:textStyle="bold"
                android:textColor="@color/colorblank"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

            <TextView
                android:id="@+id/txtsubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/colorblank"
                android:text="@string/dialog_finish_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtitle" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_weight="3"
                android:background="@drawable/gradient_bt_verde"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:text="@string/dialog_finish_button"
                android:textColor="@color/white"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtsubtitle" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableTintMode="src_in"
                android:backgroundTint="@color/colorblank"
                android:background="@drawable/ic_closedialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>