<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="pe.com.distriluz.app.ui.changepassword.ChangePasswordMvvm.ViewModel" />

        <import type="android.view.View" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:alpha="100"
                android:background="#FFFFFFFF"
                android:elevation="0dp"
                android:scrollbarSize="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_candado" />


        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sourcesansprosemibold"
            android:text="¿Olvidaste \ntu contraseña?"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#003a70"
            android:focusable="true"
            android:textSize="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:layout_marginStart="24dp"
            android:background="#0172ce"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"></LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/change_password_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayoutcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:endIconDrawable="@drawable/ic_email"
            app:endIconMode="custom"
            app:endIconTint="@color/colorEndIconactivo"
            app:endIconTintMode="src_in"
            app:error="@{vm.model.errorEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">
            <EditText
                android:id="@+id/txtcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:enabled="@{!vm.isLoaded}"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/change_password_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="24dp"
                android:text="@={vm.model.email}"
                android:textAlignment="textStart"
                android:textSize="18dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputlayoutcorreo"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:enabled="@{vm.model.enabled}"
                android:onClick="@{vm::onClickEnviarEmail}"
                android:text="@string/change_password_button"
                android:visibility="@{!vm.isLoaded}"
                tools:visibility="visible"
                />
            <pe.com.distriluz.app.ui.custom.AppLoader
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="@{vm.isLoaded}"
                />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>
